gulp-image installed. #1

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "license": "ISC",
   "main": "gulfile.js",
   "name": "",
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "devDependencies": {
+    "gulp-image": "^4.2.0"
+  }
 }
