--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon app.js",
-    "seed": "node seed.js"
+    "seed": "node seed.js",
+    "build": "run-s build:*",
+    "build:css": "concat -o source/assets/stylesheets/app.scss source/assets/stylesheets/css/*.css source/assets/stylesheets/css/**/*.css"
   },
   "name": "",
   "version": "1.0.0",
   "devDependencies": {
+    "concat": "^1.0.3",
+    "concat-glob-cli": "^0.1.0",
     "gulp-image": "^4.2.0",
     "nodemon": "^1.14.6"
   }
